fix (WA-758): Ensure spacing remains consistent on all screen widths.

--- a/docroot/themes/custom/wateraid/components/donate_widget/donate_widget.scss
+++ b/docroot/themes/custom/wateraid/components/donate_widget/donate_widget.scss
@@ -386,7 +386,7 @@
     max-width: 41.25rem;
     background: transparent;
     color: $wa-navy;
-    padding: 0;
+    padding: 0 0 2rem;
   }
 
   .donate-widget__fr-logo {
